# nfl-fantasy-analytics

./: .env.example  .gitignore  .pre-commit-config.yaml  .windsurfrules  CLAUDE.md  DuckDB_LIMITATIONS.md  PROJECT_LOG.md  PROJECT_PLAN.md  README.md  TODO.md  pyproject.toml  requirements-latest.txt  requirements-minimal.txt  requirements.txt
.claude/commands/: analyze-player.draft.md  data-quality-check.draft.md  draft-prep.md  fix-failing-tests.draft.md  session-end.md  session-start.md  update-schema.draft.md
config/: config.yaml  league_cache.yaml
docs/: DRAFT_TOOL.md  analytics_development_log.md
migrations/: 001_initial_schema.sql  002_rename_tables_source_prefix.sql  003_add_ngs_snap_tables_restructure.sql.failed  003_ngs_snap_tables_simple.sql  README.md
scripts/: debug_pbp.py  debug_pbp2.py  test_pbp_columns.py
sql/analytics/: README.md
sql/analytics/regression/: mean_reversion_analysis.sql
sql/analytics/stability/: qb_week_to_week_variance.sql
sql/practice/: README.md  data_quality_challenges.sql  sql_challenges.md
sql/practice/pbp/: 02_aggregations.sql  (+6 more)
sql/schemas/: 01_create_schemas.sql  02_platform_integration.sql  03_core_fantasy_model.sql  04_play_by_play.sql  05_advanced_metrics.sql
src/analytics/: league_aware_queries.py  sql_runner.py
src/cli/: main.py
src/connectors/: espn_api.py  test_espn.py
src/draft/: __init__.py  __main__.py  main.py
src/ingestion/: espn_league_sync.py  nfl_data.py  player_mapping.py
src/utils/: data_quality.py  db_init.py  league_config.py  migration.py  session_logger.py
tests/: test_sql_runner.py
(+13 files in other folders)
