[project]
name = "nfl-analytics"
version = "0.1.0"
description = "NFL Fantasy Football Analytics Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.1.0",
    "requests>=2.31.0",
    "duckdb>=0.9.0",
    "nfl-data-py>=0.3.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "sqlfluff>=2.3.0",
    "ipython>=8.14.0",
    "pre-commit>=3.5.0",
]
web = [
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
nfl-analytics = "src.cli.main:cli"

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"